null input validation

--- a/index.html
+++ b/index.html
@@ -56,17 +56,18 @@
     					</ul>
     				</div>
     			<div class="nano-pane"><div class="nano-slider" style="height: 141px; transform: translate(0px, 0px);"></div></div></div>  
-    			<!--Widget footer-->
+				<!--Widget footer-->
+				<center><span class="alert text-danger "><strong>Sorry!</strong> Please  ask me something.</span> </center>
     			<div class="panel-footer">
     				<div class="row">
     					<div class="col-xs-9 chat-input">
-    						<input type="text"  id ="chat-input" placeholder="Enter your text here..." class="form-control chat-input">
+    						<input type="text"  id ="chat-input" placeholder="Enter your text here..." class="form-control chat-input" required>
     					</div>
     					<div class="col-xs-3 submit">
     						<button class="btn btn-primary btn-block " id="submit" type="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
     					</div>
     				</div>
-    			</div>
+				</div>
     		</div>
     	</div>
     </div>
