--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 
 
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="main.js">
 	
 </script>
