--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="https://unpkg.com/rivescript@latest/dist/rivescript.min.js"></script>
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="main.css">
 </head>
@@ -23,9 +23,12 @@
         <div class="panel">
         	<!--Heading-->
     		<div class="panel-heading">
-    			<!-- <h3 class="panel-title">Mr Baku(Bot)</h3> -->
-    		</div>
-    
+				<i class="far fa-caret-square-down shut"></i>
+				<img src="asset/images/bot.png" class="mainbot" alt="Profile Picture">
+				<div class="botheading">
+					<h4 > <span class="hello">Hello!</span> <i class="fas fa-praying-hands"></i><br> Welcome to  <span class="companyname">icrewsystem</span></h4>
+				</div>
+    		</div> 
     		<!--Widget body-->
     		<div id="demo-chat-body" class="collapse in">
     			<div class="nano has-scrollbar" style="height:380px">
