--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<i class="far fa-caret-square-down shut"></i>
 				<img src="asset/images/bot.png" class="mainbot" alt="Profile Picture">
 				<div class="botheading">
-					<h4 > <span class="hello">Hello!</span> <i class="fas fa-praying-hands"></i><br> Welcome to  <span class="companyname">icrewsystem</span></h4>
+					<h4 > <span class="hello">Hello!</span> <i class="fas fa-praying-hands"></i><br> Welcome to  <span class="companyname">icrewsystems</span></h4>
 				</div>
     		</div> 
     		<!--Widget body-->
@@ -52,7 +52,7 @@
 							<div class="list-group">
 								<p class="option">What is your name?</p>
 								<p  class="option">What is bot?</p>
-								<p  class=" option">what is icrewsystem?</p>
+								<p  class=" option">what is icrewsystems?</p>
 							  </div>
 							<!--apeend caht  -->
     						<span id="parent"></span>
@@ -67,7 +67,7 @@
     						<input type="text"  id ="chat-input" placeholder="Enter your text here..." class="form-control chat-input" required>
     					</div>
     					<div class="col-xs-3 submit">
-    						<button class="btn btn-primary btn-block " id="submit" type="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
+    						<span class="btn btn-primary btn-block " id="submit" type="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i></span>
     					</div>
     				</div>
 				</div>
