--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
     							</div>
     							<div class="media-body pad-hor">
     								<div class="speech">
-    									<p>Can I help with with something?</p>
+    									<p>what service are you looking for?</p>
     								</div>
     							</div>
 							</li>	
 							<div class="list-group">
-								<li class="option">What is your name?</li>
-								<li  class="option">What is bot?</li>
-								<li  class=" option">what is icrewsystems?</li>
+								<li class="option">iCrew v4 products</li>
+								<li  class="option">App Development</li>
+								<li  class=" option">Web Development</li>
 							  </div>
 							<!--apeend caht  -->
 							<span id="parent"></span>
@@ -86,8 +86,76 @@
     				</div>
 				</div>
     		</div>
-    	</div>
-    </div>
+		</div>
+		<!-- requirement form -->
+	<div class="col-md-6 offset-md-3 requirementform">
+		<i class="fas fa-times shut"></i>
+		<div class="card card-outline-secondary">
+			<div class="card-body">
+				<h3 class="text-center text-light">Requirement Form</h3>
+				<div class="alert alert-info p-2 pb-3">
+					<a class="close font-weight-normal initialism" data-dismiss="alert" href="#"><samp>×</samp></a> 
+					All fields are required!
+				</div>
+				<form class="form" role="form" autocomplete="off">
+					<div class="form-group">
+						<label for="name">Full Name</label>
+						<input type="text" class="form-control" id="name" name="name" required="required" placeholder="enter your name">
+					</div>
+					<div class="form-group">
+						<label>Email</label>
+						<input type="email" class="form-control"  id="email" name="email" required="required" placeholder="enter your email">
+					</div>
+					<div class="form-group">
+						<label>Your Budget($)</label>
+						<input type="text" class="form-control"  id="email" name="bidget" required="required" placeholder="500$">
+					</div>
+					<div class="form-group">
+						<label class="col-md-12">Do you have a domain?</label>
+							<select class="form-control" name="cc_exp_mo">
+								<option value="yes">yes</option>
+								<option value="no">no</option>
+							</select>
+					</div>
+					 <div class="form-group">
+						<label class="col-md-12">Do you have a Hosting?</label>
+							<select class="form-control" name="cc_exp_mo">
+								<option value="yes">yes</option>
+								<option value="no">no</option>
+							</select>
+					</div>
+					 <div class="form-group">
+						<label class="col-md-12">Do you have a SmartCARS?</label>
+							<select class="form-control" name="cc_exp_mo">
+								<option value="yes">yes</option>
+								<option value="no">no</option>
+							</select>
+					</div>
+					<div class="form-group">
+						<label class="col-md-12">Expected Delivery</label>
+							<select class="form-control" name="cc_exp_mo">
+								<option value="3 weeks">3 weeks</option>
+								<option value="1 month">1 month</option>
+								<option value="3 months">3 months</option>
+								<option value="6 months">6 months</option>
+								<option value="9 months">9 months</option>
+							</select>
+					</div>
+					<hr>
+					<div class="form-group row">
+						<div class="col-md-6">
+							<li type="reset" class="option">Cancel</li>
+						</div>
+						<div class="col-md-6">
+							<li type="submit" class="option">Submit</li>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+	<!-- requrement form end -->
+	</div>
 </div>
 
 
