--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					</div>
 					<div class="form-group">
 						<label>Your Budget($)</label>
-						<input type="text" class="form-control"  id="email" name="bidget" required="required" placeholder="500$">
+						<input type="text" class="form-control"  id="budget" name="budget" required="required" placeholder="500$">
 					</div>
 					<div class="form-group">
 						<label class="col-md-12">Do you have a domain?</label>
