--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     							</div>
     							<div class="media-body pad-hor">
     								<div class="speech">
-    									<p> Hello!  <i class="fas fa-praying-hands"></i><br> Welcome to  <strong style="color: rgb(184, 30, 125);">icrewsystems</strong> </p>
+    									<p> Hello!<br> Welcome to  <strong style="color: #337ab7">icrewsystems</strong> </p>
     								</div>
     							</div>
 							</li>
