outline focus remove

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     		<div class="panel-heading">
 				<i class="fas fa-times shut"></i>
 				<div class="avatar">
-					<img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="img-circle img-sm mr-3 " alt="Profile Picture">  <span class="botname">Baku</span>
+					<img src="https://icrewsystems.com/icrewsystems_mascot.gif" class="img-circle img-sm mr-3 " alt="Profile Picture">  <span class="botname">Baku</span>
 				</div>
     		</div> 
     		<!--Widget body-->
@@ -35,7 +35,7 @@
     					<ul class="list-unstyled media-block">  						
 							<li class="mar-btm">
 								<div class="media-left">
-    								<img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="img-circle img-m" alt="Profile Picture">
+    								<img src="https://icrewsystems.com/icrewsystems_mascot.gif" class="img-circle img-m" alt="Profile Picture">
     							</div>
     							<div class="media-body pad-hor">
     								<div class="speech">
@@ -45,7 +45,7 @@
 							</li>
 							<li class="mar-btm">
 								<div class="media-left">
-    								<img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="img-circle img-m" alt="Profile Picture">
+    								<img src="https://icrewsystems.com/icrewsystems_mascot.gif" class="img-circle img-m" alt="Profile Picture">
     							</div>
     							<div class="media-body pad-hor">
     								<div class="speech">
