--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							<span id="parent"></span>
 							<li class="mar-btm" id="typing">
 								<div class="media-left">
-    								<img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="img-circle img-m" alt="Profile Picture">
+    								<img src="https://icrewsystems.com/icrewsystems_mascot.gif" class="img-circle img-m" alt="Profile Picture">
     							</div>
     							<div class="media-body pad-hor">
     								<div class="speech">
