--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     		</div>
 		</div>
 		<!-- requirement form -->
-	<div class="col-md-6 offset-md-3 requirementform">
+	<div class="col-md-6 offset-md-3 requirementform" style = 'display: none;'>
 		<i class="fas fa-times shut"></i>
 		<div class="card card-outline-secondary">
 			<div class="card-body">
