--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
     			<div class="panel-footer">
     				<div class="row">
     					<div class="col-xs-9 chat-input">
-    						<input type="text"  id ="chat-input" placeholder="Enter your text here..." class="form-control chat-input" autofocus>
+    						<input type="text"  id ="chat-input" placeholder="Enter your text here..." class="form-control chat-input" >
     					</div>
     					<div class="col-xs-3 submit">
     						<span class="btn btn-primary btn-block " id="submit" type="submit"><i class="fas fa-paper-plane"></i></span>
@@ -88,25 +88,28 @@
     		</div>
 		</div>
 		<!-- requirement form -->
-	<div class="col-md-6 offset-md-3 requirementform" style = 'display: none;'>
-		<i class="fas fa-times shut"></i>
+		<div class="overlay">
+			
+		</div>
+	<div class="col-md-6 offset-md-3 requirementform" >
+		<!-- <i class="fas fa-times shut"></i> -->
 		<div class="card card-outline-secondary">
 			<div class="card-body">
-				<h3 class="text-center text-light">Requirement Form</h3>
-				<div class="alert alert-info p-2 pb-3">
+				<h3 class="text-center text-light">Please Enter Your Details</h3>
+				<div class="alert alert-info p-2 pb-3 banned" style="display: none;">
 					<a class="close font-weight-normal initialism" data-dismiss="alert" href="#"><samp>×</samp></a> 
 					All fields are required!
 				</div>
 				<form class="form" role="form" autocomplete="off">
 					<div class="form-group">
 						<label for="name">Full Name</label>
-						<input type="text" class="form-control" id="name" name="name" required="required" placeholder="enter your name">
+						<input type="text" class="form-control" id="name" name="name" required="required" placeholder="enter your name" autofocus>
 					</div>
 					<div class="form-group">
 						<label>Email</label>
 						<input type="email" class="form-control"  id="email" name="email" required="required" placeholder="enter your email">
 					</div>
-					<div class="form-group">
+					<!-- <div class="form-group">
 						<label>Your Budget($)</label>
 						<input type="text" class="form-control"  id="budget" name="budget" required="required" placeholder="500$">
 					</div>
@@ -141,13 +144,10 @@
 								<option value="9 months">9 months</option>
 							</select>
 					</div>
-					<hr>
-					<div class="form-group row">
-						<div class="col-md-6">
-							<li type="reset" class="option">Cancel</li>
-						</div>
-						<div class="col-md-6">
-							<li type="submit" class="option">Submit</li>
+					<hr> -->
+					<div class="form-group row" >
+						<div class="col-md-6" >
+							<button class="snip1417" id="data">Submit</button>
 						</div>
 					</div>
 				</form>
