--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
     			<div class="nano-pane"><div class="nano-slider" style="height: 141px; transform: translate(0px, 0px);"></div></div></div>  
 				<!--Widget footer-->
 				<center><span class="alert text-danger " style="display: none;"><i class="fas fa-frown"></i><strong>Sorry!</strong> Please  ask me something.</span> </center>
-    			<div class="panel-footer">
+    			<div class="panel-footer" style="display: none;">
     				<div class="row">
     					<div class="col-xs-9 chat-input">
     						<input type="text"  id ="chat-input" placeholder="Enter your text here..." class="form-control chat-input" autofocus>
@@ -88,68 +88,32 @@
     		</div>
 		</div>
 		<!-- requirement form -->
-	<div class="col-md-6 offset-md-3 requirementform" style = 'display: none;'>
-		<i class="fas fa-times shut"></i>
+	<div class="col-md-6 offset-md-3 requirementform">
+		<!-- <i class="fas fa-times shut"></i> -->
 		<div class="card card-outline-secondary">
 			<div class="card-body">
-				<h3 class="text-center text-light">Requirement Form</h3>
-				<div class="alert alert-info p-2 pb-3">
+				<!-- <h5 class="text-center text-light" style="color: aliceblue;">Enter your details to Start chatting.</h5> -->
+				<!-- <div class="alert alert-info p-2 pb-3">
 					<a class="close font-weight-normal initialism" data-dismiss="alert" href="#"><samp>×</samp></a> 
 					All fields are required!
-				</div>
-				<form class="form" role="form" autocomplete="off">
+				</div> -->
+				<br><br><br>
+				<form class="form " role="form" autocomplete="on">
 					<div class="form-group">
 						<label for="name">Full Name</label>
-						<input type="text" class="form-control" id="name" name="name" required="required" placeholder="enter your name">
+						<input type="text" class="form-control" id="name" name="name" required="required" >
 					</div>
+					<center><span class="banned text-light " style="display: none;"><i class="fas fa-frown"></i><strong>Sorry!</strong> Please enter your name and email.</span> </center>
 					<div class="form-group">
 						<label>Email</label>
-						<input type="email" class="form-control"  id="email" name="email" required="required" placeholder="enter your email">
+						<input type="email" class="form-control"  id="email" name="email" required="required">
+					</div>	
+					<div class="send">
+					<!-- <button type="submit" >Submit</button> -->
+					<button type="submit" class="snip1086"><span>Submit</span><i class="ion-checkmark"></i></button>
 					</div>
-					<div class="form-group">
-						<label>Your Budget($)</label>
-						<input type="text" class="form-control"  id="budget" name="budget" required="required" placeholder="500$">
-					</div>
-					<div class="form-group">
-						<label class="col-md-12">Do you have a domain?</label>
-							<select class="form-control" name="cc_exp_mo">
-								<option value="yes">yes</option>
-								<option value="no">no</option>
-							</select>
-					</div>
-					 <div class="form-group">
-						<label class="col-md-12">Do you have a Hosting?</label>
-							<select class="form-control" name="cc_exp_mo">
-								<option value="yes">yes</option>
-								<option value="no">no</option>
-							</select>
-					</div>
-					 <div class="form-group">
-						<label class="col-md-12">Do you have a SmartCARS?</label>
-							<select class="form-control" name="cc_exp_mo">
-								<option value="yes">yes</option>
-								<option value="no">no</option>
-							</select>
-					</div>
-					<div class="form-group">
-						<label class="col-md-12">Expected Delivery</label>
-							<select class="form-control" name="cc_exp_mo">
-								<option value="3 weeks">3 weeks</option>
-								<option value="1 month">1 month</option>
-								<option value="3 months">3 months</option>
-								<option value="6 months">6 months</option>
-								<option value="9 months">9 months</option>
-							</select>
-					</div>
-					<hr>
-					<div class="form-group row">
-						<div class="col-md-6">
-							<li type="reset" class="option">Cancel</li>
-						</div>
-						<div class="col-md-6">
-							<li type="submit" class="option">Submit</li>
-						</div>
-					</div>
+
+
 				</form>
 			</div>
 		</div>
