--- a/public/index.html
+++ b/public/index.html
@@ -12,20 +12,18 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-<div class="container">
+<div>
 	<audio id="sound">
 		<source src="asset/sound.mp3" type="audio/ogg">
 	  </audio>
 	  <audio id="sound2">
 		<source src="asset/sound3.mp3" type="audio/ogg">
 	  </audio>
-    <div class="col-md-12 col-lg-6 mobile">
         <div class="panel">
         	<!--Heading-->
     		<div class="panel-heading">
-				<i class="fas fa-times shut"></i>
 				<div class="avatar">
-					<img src="https://icrewsystems.com/icrewsystems_mascot.gif" class="img-circle img-sm mr-3 " alt="Profile Picture">  <span class="botname">Baku</span>
+					<img src="https://www.freepngimg.com/save/62719-vector-end-icons-bot-chatbot-iconworkshop-axialis/512x512" class="img-circle img-sm mr-3 " alt="Profile Picture">  <span class="botname">Baku</span>
 				</div>
     		</div> 
     		<!--Widget body-->
@@ -35,7 +33,7 @@
     					<ul class="list-unstyled media-block">  						
 							<li class="mar-btm">
 								<div class="media-left">
-    								<img src="https://icrewsystems.com/icrewsystems_mascot.gif" class="img-circle img-m" alt="Profile Picture">
+    								<img src="https://www.freepngimg.com/save/62719-vector-end-icons-bot-chatbot-iconworkshop-axialis/512x512" class="img-circle img-m" alt="Profile Picture">
     							</div>
     							<div class="media-body pad-hor">
     								<div class="speech">
@@ -45,7 +43,7 @@
 							</li>
 							<li class="mar-btm">
 								<div class="media-left">
-    								<img src="https://icrewsystems.com/icrewsystems_mascot.gif" class="img-circle img-m" alt="Profile Picture">
+    								<img src="https://www.freepngimg.com/save/62719-vector-end-icons-bot-chatbot-iconworkshop-axialis/512x512" class="img-circle img-m" alt="Profile Picture">
     							</div>
     							<div class="media-body pad-hor">
     								<div class="speech">
@@ -62,7 +60,7 @@
 							<span id="parent"></span>
 							<li class="mar-btm" id="typing" style="display: none;">
 								<div class="media-left">
-    								<img src="https://icrewsystems.com/icrewsystems_mascot.gif" class="img-circle img-m" alt="Profile Picture">
+    								<img src="https://www.freepngimg.com/save/62719-vector-end-icons-bot-chatbot-iconworkshop-axialis/512x512" class="img-circle img-m" alt="Profile Picture">
     							</div>
     							<div class="media-body pad-hor">
     								<div class="speech">
@@ -75,7 +73,7 @@
     			<div class="nano-pane"><div class="nano-slider" style="height: 141px; transform: translate(0px, 0px);"></div></div></div>  
 				<!--Widget footer-->
 				<center><span class="alert text-danger " style="display: none;"><i class="fas fa-frown"></i><strong>Sorry!</strong> Please  ask me something.</span> </center>
-    			<div class="panel-footer" style="display: none;">
+    			<div class="panel-footer" style="display: block;">
     				<div class="row">
     					<div class="col-xs-9 chat-input">
     						<input type="text"  id ="chat-input" placeholder="Enter your text here..." class="form-control chat-input" autofocus>
@@ -88,7 +86,7 @@
     		</div>
 		</div>
 		<!-- requirement form -->
-	<div class="col-md-6 offset-md-3 requirementform">
+	<div class="col-md-6 offset-md-3 requirementform" style="display: none;">
 		<!-- <i class="fas fa-times shut"></i> -->
 		<div class="card card-outline-secondary">
 			<div class="card-body">
@@ -119,7 +117,7 @@
 		</div>
 	</div>
 	<!-- requrement form end -->
-	</div>
+	
 </div>
 
 
