--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
     			<div class="nano-pane"><div class="nano-slider" style="height: 141px; transform: translate(0px, 0px);"></div></div></div>  
 				<!--Widget footer-->
 				<center><span class="alert text-danger " style="display: none;"><i class="fas fa-frown"></i><strong>Sorry!</strong> Please  ask me something.</span> </center>
-    			<div class="panel-footer" style="display: block;">
+    			<div class="panel-footer" style="visibility: hidden;background-color: white;">
     				<div class="row">
     					<div class="col-xs-9 chat-input">
     						<input type="text"  id ="chat-input" placeholder="Enter your text here..." class="form-control chat-input" autofocus>
@@ -86,7 +86,7 @@
     		</div>
 		</div>
 		<!-- requirement form -->
-	<div class="col-md-6 offset-md-3 requirementform" style="display: none;">
+	<div class="requirementform" style="display: block;">
 		<!-- <i class="fas fa-times shut"></i> -->
 		<div class="card card-outline-secondary">
 			<div class="card-body">
@@ -95,7 +95,7 @@
 					<a class="close font-weight-normal initialism" data-dismiss="alert" href="#"><samp>×</samp></a> 
 					All fields are required!
 				</div> -->
-				<br><br><br>
+				<br>
 				<form class="form " role="form" autocomplete="on">
 					<div class="form-group">
 						<label for="name">Full Name</label>
