--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
 				<div class="avatar">
 					<img src="https://www.freepngimg.com/save/62719-vector-end-icons-bot-chatbot-iconworkshop-axialis/512x512" class="img-circle img-sm mr-3 " alt="Profile Picture">  <span class="botname">Baku</span>
 				</div>
+				<hr>
     		</div> 
     		<!--Widget body-->
     		<div id="demo-chat-body" class="collapse in">
@@ -37,7 +38,7 @@
     							</div>
     							<div class="media-body pad-hor">
     								<div class="speech">
-    									<p> Hello!<br> Welcome to  <strong style="color:  rgb(239, 41, 100)">iCrewsystems</strong> </p>
+    									<p> Hello!<br> Welcome to  <strong style="color:  rgb(239, 41, 100)">bakumegusta.tech</strong> </p>
     								</div>
     							</div>
 							</li>
@@ -52,7 +53,7 @@
     							</div>
 							</li>	
 							<div class="list-group">
-								<li class="option">iCrew v4 products <i class="fas fa-rocket"></i></li>
+								<li class="option">Project collaboration <i class="fas fa-rocket"></i></li>
 								<li  class="option">App Development <i class="fab fa-android"></i></li>
 								<li  class=" option">Web Development <i class="fas fa-cogs"></i></li>
 							  </div>
@@ -72,7 +73,7 @@
     				</div>
     			<div class="nano-pane"><div class="nano-slider" style="height: 141px; transform: translate(0px, 0px);"></div></div></div>  
 				<!--Widget footer-->
-				<center><span class="alert text-danger " style="display: none;"><i class="fas fa-frown"></i><strong>Sorry!</strong> Please  ask me something.</span> </center>
+				<center><span class="alert " style="display: none;color: rgb(167, 162, 165);"><i class="fas fa-frown"></i><strong>Sorry!</strong> Please  ask me something.</span> </center>
     			<div class="panel-footer" style="visibility: hidden;background-color: white;">
     				<div class="row">
     					<div class="col-xs-9 chat-input">
@@ -98,17 +99,17 @@
 				<br>
 				<form class="form " role="form" autocomplete="on">
 					<div class="form-group">
-						<label for="name">Full Name</label>
+						<label for="name">Name</label>
 						<input type="text" class="form-control" id="name" name="name" required="required" >
 					</div>
-					<center><span class="banned text-light " style="display: none;"><i class="fas fa-frown"></i><strong>Sorry!</strong> Please enter your name and email.</span> </center>
+					<center><span class="banned" style="display: none;color: chartreuse;"><i class="fas fa-frown"></i><strong>Sorry!</strong> Please enter your name and email.</span> </center>
 					<div class="form-group">
 						<label>Email</label>
 						<input type="email" class="form-control"  id="email" name="email" required="required">
 					</div>	
 					<div class="send">
 					<!-- <button type="submit" >Submit</button> -->
-					<button type="submit" class="snip1086"><span>Submit</span><i class="ion-checkmark"></i></button>
+					<button type="submit" class="snip1582">Submit</button>
 					</div>
 
 
