--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 				<hr>
     		</div> 
     		<!--Widget body-->
-    		<div id="demo-chat-body" class="collapse in">
+    		<div id="chat-body" class="collapse in">
     			<div class="nano has-scrollbar" style="height:380px">
     				<div class="nano-content pad-all" tabindex="0" style="right: -17px;">
     					<ul class="list-unstyled media-block">  						
