--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
         	<!--Heading-->
     		<div class="panel-heading">
 				<div class="avatar">
-					<img src="https://www.freepngimg.com/save/62719-vector-end-icons-bot-chatbot-iconworkshop-axialis/512x512" class="img-circle img-sm mr-3 " alt="Profile Picture">  <span class="botname">Baku</span>
+					<img src="botavatar.png" class="img-circle img-sm mr-3 " alt="Profile Picture">  <span class="botname">Baku</span>
 				</div>
 				<hr>
     		</div> 
@@ -34,7 +34,7 @@
     					<ul class="list-unstyled media-block">  						
 							<li class="mar-btm">
 								<div class="media-left">
-    								<img src="https://www.freepngimg.com/save/62719-vector-end-icons-bot-chatbot-iconworkshop-axialis/512x512" class="img-circle img-m" alt="Profile Picture">
+    								<img src="botavatar.png" class="img-circle img-m" alt="Profile Picture">
     							</div>
     							<div class="media-body pad-hor">
     								<div class="speech">
@@ -44,7 +44,7 @@
 							</li>
 							<li class="mar-btm">
 								<div class="media-left">
-    								<img src="https://www.freepngimg.com/save/62719-vector-end-icons-bot-chatbot-iconworkshop-axialis/512x512" class="img-circle img-m" alt="Profile Picture">
+    								<img src="botavatar.png" class="img-circle img-m" alt="Profile Picture">
     							</div>
     							<div class="media-body pad-hor">
     								<div class="speech">
@@ -61,7 +61,7 @@
 							<span id="parent"></span>
 							<li class="mar-btm" id="typing" style="display: none;">
 								<div class="media-left">
-    								<img src="https://www.freepngimg.com/save/62719-vector-end-icons-bot-chatbot-iconworkshop-axialis/512x512" class="img-circle img-m" alt="Profile Picture">
+    								<img src="botavatar.png" class="img-circle img-m" alt="Profile Picture">
     							</div>
     							<div class="media-body pad-hor">
     								<div class="speech">
