--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,7 @@
 								<li class="option">Project collaboration <i class="fas fa-rocket"></i></li>
 								<li  class="option">App Development <i class="fab fa-android"></i></li>
 								<li  class=" option">Web Development <i class="fas fa-cogs"></i></li>
+								<li  class=" option">chatbot Development <i class="fas fa-robot"></i></li>
 							  </div>
 							<!--apeend caht  -->
 							<span id="parent"></span>
