--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
 				<div class="avatar">
 					<img src="botavatar.png" class="img-circle img-sm mr-3 " alt="Profile Picture">  <span class="botname">Baku</span>
 				</div>
+				<span class="tagline">Personal Digital Assistant</span>
 				<hr>
     		</div> 
     		<!--Widget body-->
@@ -38,7 +39,7 @@
     							</div>
     							<div class="media-body pad-hor">
     								<div class="speech">
-    									<p> Hello!<br> Welcome to  <strong style="color:  rgb(239, 41, 100)">bakumegusta.tech</strong> </p>
+    									<p> Hello!<br> Welcome to  <strong style="color:#c3c3b9">bakumegusta.tech</strong> </p>
     								</div>
     							</div>
 							</li>
@@ -99,11 +100,12 @@
 				</div> -->
 				<br>
 				<form class="form " role="form" autocomplete="on">
+					<span class="text-center" style="color: #c3c3b9;margin: 0px 40px;">Please enter your details to continue.</span>
 					<div class="form-group">
 						<label for="name">Name</label>
 						<input type="text" class="form-control" id="name" name="name" required="required" >
 					</div>
-					<center><span class="banned" style="display: none;color: chartreuse;"><i class="fas fa-frown"></i><strong>Sorry!</strong> Please enter your name and email.</span> </center>
+					<center><span class="banned" style="display: none;color: #c3c3b9;"><i class="fas fa-frown"></i><strong>Sorry!</strong> Please enter your name and email.</span> </center>
 					<div class="form-group">
 						<label>Email</label>
 						<input type="email" class="form-control"  id="email" name="email" required="required">
