--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
 				</div> -->
 				<br>
 				<form class="form " role="form" autocomplete="on">
-					<span class="text-center" style="color: #c3c3b9;margin: 0px 40px;">Please enter your details to continue.</span>
+					<span class="text-center" style="color: #c3c3b9;margin: 0px 40px;font-size: 11;">Please enter your details to continue.</span>
 					<div class="form-group">
 						<label for="name">Name</label>
 						<input type="text" class="form-control" id="name" name="name" required="required" >
