--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -38,7 +38,7 @@
           <th scope="col">Question</th>
           <th scope="col">Answer</th>
           <th scope="col">SessionID</th>
-          <th scope="col">Convo</th>
+          <th scope="col">Chat</th>
         </tr>
       </thead>
       <tbody id="chatparent">
