--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
     			<div class="nano-pane"><div class="nano-slider" style="height: 141px; transform: translate(0px, 0px);"></div></div></div>  
 				<!--Widget footer-->
 				<center><span class="alert " style="display: none;color: rgb(167, 162, 165);"><i class="fas fa-frown"></i><strong>Sorry!</strong> Please  ask me something.</span> </center>
-    			<div class="panel-footer" style="visibility: hidden;background-color: white;">
+    			<div class="panel-footer" style="background-color: white;">
     				<div class="row">
     					<div class="col-xs-9 chat-input">
     						<input type="text"  id ="chat-input" placeholder="Enter your text here..." class="form-control chat-input" autofocus>
@@ -89,7 +89,7 @@
     		</div>
 		</div>
 		<!-- requirement form -->
-	<div class="requirementform" style="display: block;">
+	<div class="requirementform" style="display: none;">
 		<!-- <i class="fas fa-times shut"></i> -->
 		<div class="card card-outline-secondary">
 			<div class="card-body">
