--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#" style="margin-left: 10%;">Dashboard</a>
+    <a class="navbar-brand" href="#" style="margin-left: 45%;">Dashboard</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -38,7 +38,7 @@
           <th scope="col">Question</th>
           <th scope="col">Answer</th>
           <th scope="col">SessionID</th>
-          <th scope="col">Chat</th>
+          <th scope="col">Action</th>
         </tr>
       </thead>
       <tbody id="chatparent">
